--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description              : "Backend Developer"
 url                      : "https://bakose.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/images/profile.jpeg"
+teaser                   : "/assets/images/teaser.png"
 logo                     : ""
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
@@ -89,7 +89,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : "assets/images/profile.jpeg"
+og_image                 : "assets/images/profile.png"
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Bakose"
-  avatar           : "/assets/images/profile.jpeg"
+  avatar           : "/assets/images/profile.png"
   bio              : "Backend Developer"
   location         : "Seoul"
   email            :
