--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,39 @@ main:
     url: /about/
   - title: "Categories"
     url: /categories/
+  - title: "Tags"
+    url: /tags/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+
+# docs
+docs:
+  - title: "Programming"
+    url: /
+    children:
+      - title: "Python"
+        url: /
+      - title: "Golang"
+        url: /
+      - title: "Android"
+        url: /categories/android
+      - title: "Rasp"
+        url: /
+  - title: "Cloud Computing"
+    children:
+      - title: "Google Cloud"
+        url: /
+      - title: "ZeroMQ"
+        url: /
+      - title: "Docker"
+        url: /
+  - title: "Mac/Linux"
+    children:
+      - title: "Mac"
+        url: /categories/mac
+      - title: "Linux"
+        url: /
