--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@ docs:
       - title: "Python"
         url: /
       - title: "Golang"
-        url: /
+        url: /categories/golang
       - title: "Android"
         url: /categories/android
       - title: "Rasp"
