--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -41,4 +41,4 @@ docs:
       - title: "Mac"
         url: /categories/mac
       - title: "Linux"
-        url: /categories/docker
+        url: /categories/linux
